# BullPgia

./: CMakeLists.txt  Chooser.cpp  Chooser.hpp  CompileError1.cpp  CompileError2.cpp  Demo.cpp  DummyChoosers.cpp  DummyChoosers.hpp  DummyGuessers.cpp  DummyGuessers.hpp  Guesser.cpp  Guesser.hpp  README.md  SmartGuesser.cpp  SmartGuesser.hpp  Test.cpp  badkan.hpp  calculate.cpp  calculate.hpp  play.cpp  play.hpp
